fix: change img source

--- a/templates/bot-register.hbs
+++ b/templates/bot-register.hbs
@@ -73,7 +73,7 @@
                                                                             style="font-size:10.0pt;font-family:Arial,sans-serif;color:#444444"><img
                                                                                 border="0" width="155" height="155"
                                                                                 style="width:1.6145in;height:1.6145in"
-                                                                                src="https://ci3.googleusercontent.com/proxy/oVAmOUWEyQOzImWADg3l53yoShzgrsT4dOoX9tvh7gU-8Gl3zcK_48pvTnHDhsnaGeBPi6h8s1k_EioLwJQVHlnAXXI0NlLu_krTB-IgNf-L9NfON_szkRk6SjhqkwwiYzidOJeI4wja-OEniUD-3BFQuikfZb4JtNrnb75i726ebP218g=s0-d-e1-ft#https://7854587.fs1.hubspotusercontent-na1.net/hubfs/7854587/staff_images/b6515d2a-57eb-40d0-98cb-e20a6c0ee584.png"
+                                                                                src="https://7854587.fs1.hubspotusercontent-na1.net/hubfs/7854587/staff_images/b6515d2a-57eb-40d0-98cb-e20a6c0ee584.png"
                                                                                 alt="Chloe Rankin" class="CToWUd a6T"
                                                                                 data-bit="iit" tabindex="0">
                                                                             <div class="a6S" dir="ltr"
@@ -230,7 +230,7 @@
                                                                         style="font-size:10.0pt;font-family:Segoe UI,sans-serif"><img
                                                                             border="0" width="451" height="55"
                                                                             style="width:4.6979in;height:.5729in"
-                                                                            src="https://ci3.googleusercontent.com/proxy/u4Q5qNG9wf7imyHfQ-MgYJG48fwCGKqubPc_V8KXfw-zA-1RgL_Z0qND3_o52sXqcnFO838hDsbGqwVqFe0g0Z88DRiINxSoC6z7l5Hp6ZkZsPHvtW3wWoE6tLbjCsGb5f3gzRW2vYuv6HtQjMMHSUv1LbqMTYSsgg=s0-d-e1-ft#https://f.hubspotusercontent30.net/hubfs/7854587/Email%20Signature%20Assets/sourci-signature-image.png"
+                                                                            src="https://f.hubspotusercontent30.net/hubfs/7854587/Email%20Signature%20Assets/sourci-signature-image.png"
                                                                             class="CToWUd" data-bit="iit"></span><span
                                                                         style="font-size:12.0pt;font-family:Arial,sans-serif;color:#222222"><br>
                                                                     </span><span
@@ -239,7 +239,7 @@
                                                                         style="font-size:12.0pt;font-family:Arial,sans-serif;color:#222222"><img
                                                                             border="0" width="451" height="48"
                                                                             style="width:4.6979in;height:.5in"
-                                                                            src="https://ci3.googleusercontent.com/proxy/T1KntTkkO_hZkMc7aB1CBqs3WdiHRN5W_jQDD2rzbuYEeu7tvETdNl7JyGmkX43uzS44a8B8_DKAZn5jy4Lg6dJrJDprfeoSvTb9dtiGIebkfIQa_SnkVWSgT5FzbFb3WvGgvsjejwfjG_s5z2RkSgI=s0-d-e1-ft#https://f.hubspotusercontent30.net/hubfs/7854587/Email%20Signature%20Assets/sourci-clients.png"
+                                                                            src="https://f.hubspotusercontent30.net/hubfs/7854587/Email%20Signature%20Assets/sourci-clients.png"
                                                                             class="CToWUd" data-bit="iit"></span><span
                                                                         style="font-size:10.0pt;font-family:Segoe UI,sans-serif"><u></u><u></u></span>
                                                                 </p>
