chore: update template

--- a/templates/bot-register.hbs
+++ b/templates/bot-register.hbs
@@ -32,22 +32,16 @@
                             sessions in the group where you can ask him any questions you have and get some extra
                             tips.&nbsp;<u></u><u></u>
                         </p>
-                        <div>
-                            <p class="MsoNormal" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">As
-                                part of your involvement with the course, you also receive
-                                complimentary access to Sourci's Factory Finder Platform! This platform searches the
-                                corners of the internet to put forward the best manufacturing partner options for you
-                                based
-                                on a number of factors. Your account has been created for you already! To set your
-                                password, please click
-                                <a href="{{url}}"
-                                    target="_blank">
-                                    here</a>.&nbsp;<u></u><u></u>
-                            </p>
-                        </div>
-                        <div>
-                            <p class="MsoNormal"><u></u>&nbsp;<u></u></p>
-                        </div>
+                        <p class="MsoNormal" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">As
+                            part of your involvement with the course, you also receive
+                            complimentary access to Sourci's Factory Finder Platform! This platform searches the
+                            corners of the internet to put forward the best manufacturing partner options for you
+                            based
+                            on a number of factors. Your account has been created for you already! To set your
+                            password, please click
+                            <a href="{{url}}" target="_blank">
+                                here</a>.&nbsp;<u></u><u></u>
+                        </p>
                         <div>
                             <p class="MsoNormal" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">
                                 Please reach out if I can support you in any way. Wishing you the very
