fix: adjust email

--- a/templates/bot-register.hbs
+++ b/templates/bot-register.hbs
@@ -145,7 +145,7 @@
                                                                                             style="font-size:10.0pt;font-family:Arial,sans-serif;color:#6e6d6d">&nbsp;&nbsp;<a
                                                                                                 href="mailto:clara@sourci.com.au"
                                                                                                 target="_blank"><span
-                                                                                                    style="color:#1155cc">clara@sourci.com.au</span></a></span><span
+                                                                                                    style="color:#1155cc">hello@sourci.com.au</span></a></span><span
                                                                                             style="font-size:10.0pt;font-family:Arial,sans-serif;color:#9b9b9b"><u></u><u></u></span>
                                                                                     </p>
                                                                                 </td>
